--- a/index..html
+++ b/index..html
@@ -7,32 +7,15 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat:wght@100&family=Sacramento&display=swap" rel="stylesheet">
 </head>
-<link id="styleing" rel="stylesheet" type="text/css" href="css/light-mode.css">
+<link rel="stylesheet" type="text/css" href="css/dark-mode.css">
 <link rel="icon" href="images/favicon.ico">
 
 <body>
 
-  <script type="text/javascript">
-  var mode = 0;
-    function color_mode(mode){
-      if (mode % 2 == 0){
-        ("#styleing").attr({"href":"css/dark-mode.css"})
-      }
-      else {
-        $("#styleing").attr({"href":"css/light-mode.css"})
-      }
-    }
-
-    function color_change(){
-        $("#styleing").attr({"href":"css/dark-mode.css"})
-    }
-  </script>
-
-
   <div class="top-container">
     <img class="top-cloud" src="images/cloud.png" alt="Cloud">
     <h1>I'm Muhammad</h1>
-    <h2><strong>a programmer</strong></h2>
+    <h2 class="discription"><strong>a programmer</strong></h2>
     <img class="bottom-cloud" src="images/cloud.png" alt="Cloud">
     <img src="images/mountain.png" alt="">
   </div>
@@ -89,7 +72,7 @@
     <a class="footer-link" target="_blank" href="https://www.facebook.com/profile.php?id=100040817438747">Facebook</a>
     <a class="footer-link" target="_blank" href="https://www.instagram.com/muhammad895zaman/">Instagram</a>
     <p class="copyright">© 2021 Muhammad Zaman.</p>
-    <a class="mode" href="index..html">Dark Mode</a>
+    <a class="mode" href="index.html">Light Mode</a>
   </div>
 
 
