--- a/index.html
+++ b/index.html
@@ -22,10 +22,6 @@
         $("#styleing").attr({"href":"css/light-mode.css"})
       }
     }
-
-    function color_change(){
-        $("#styleing").attr({"href":"css/dark-mode.css"})
-    }
   </script>
 
 
@@ -34,7 +30,7 @@
     <h1>I'm Muhammad</h1>
     <h2><strong>a programmer</strong></h2>
     <img class="bottom-cloud" src="images/cloud.png" alt="Cloud">
-    <img src="images/mountain.png" alt="">
+    <img src="images/mountain.png" alt="Mountain">
   </div>
 
   <div class="middle-container">
