Set default to dark mode.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat:wght@100&family=Sacramento&display=swap" rel="stylesheet">
 </head>
-<link id="styleing" rel="stylesheet" type="text/css" href="css/light-mode.css">
+<link id="styleing" rel="stylesheet" type="text/css" href="css/dark-mode.css">
 <link rel="icon" href="images/favicon.ico">
 
 <body>
@@ -85,7 +85,7 @@
     <a class="footer-link" target="_blank" href="https://www.facebook.com/profile.php?id=100040817438747">Facebook</a>
     <a class="footer-link" target="_blank" href="https://www.instagram.com/muhammad895zaman/">Instagram</a>
     <p class="copyright">© 2021 Muhammad Zaman.</p>
-    <a class="mode" href="index..html">Dark Mode</a>
+    <a class="mode" href="index..html">Light Mode</a>
   </div>
 
 
