Try to change original mode.

--- a/index..html
+++ b/index..html
@@ -15,7 +15,7 @@
   <div class="top-container">
     <img class="top-cloud" src="images/cloud.png" alt="Cloud">
     <h1>I'm Muhammad</h1>
-    <h2 class="discription"><strong>a programmer</strong></h2>
+    <h2 style="color:blue;"><strong>a programmer</strong></h2>
     <img class="bottom-cloud" src="images/cloud.png" alt="Cloud">
     <img src="images/mountain.png" alt="">
   </div>
