--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <div class="top-container">
     <img class="top-cloud" src="images/cloud.png" alt="Cloud">
     <h1>I'm Muhammad</h1>
-    <h2><strong>a programmer</strong></h2>
+    <h2 class="discription"><strong>a programmer</strong></h2>
     <img class="bottom-cloud" src="images/cloud.png" alt="Cloud">
     <img src="images/mountain.png" alt="Mountain">
   </div>
@@ -38,7 +38,6 @@
       <img src="images/profile-photo.jpg" class="body_photo" alt="Profile Photo">
       <h2>Hello.</h2>
       <p class="mid-para intro-para">I am an incoming Computer Science student at the Univerity of Waterloo interested in Data Science and Front-end Web development.</p>
-      <button type="button" onclick="color_change()" name="button">Color mode</button>
     </div>
     <hr>
     <div class="skills">
