--- a/index..html
+++ b/index..html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat:wght@100&family=Sacramento&display=swap" rel="stylesheet">
 </head>
 <link rel="stylesheet" type="text/css" href="css/light-mode.css">
-<link rel="icon" href="images/favicon.ico">
+<link rel="icon" href="images/favicon_light.ico">
 
 <body>
 
