Fix profile links.

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
   <div class="bottom-container">
     <a class="footer-link" target="_blank" href="https://www.linkedin.com/in/muhammad-hamza-zaman/">LinkedIn</a>
     <a class="footer-link" target="_blank" href="https://github.com/MuhammadZ985">GitHub</a>
-    <a class="footer-link" target="_blank" href="https://www.facebook.com/profile.php?id=100040817438747">Facebook</a>
-    <a class="footer-link" target="_blank" href="https://www.instagram.com/muhammad895zaman/">Instagram</a>
+    <a class="footer-link" target="_blank" href="https://www.facebook.com/MuhammadZ895/">Facebook</a>
+    <a class="footer-link" target="_blank" href="https://www.instagram.com/muhammadhzaman/">Instagram</a>
     <p class="copyright">© 2021 Muhammad Zaman.</p>
     <button class="mode" id="change_mode" onclick="change_Mode()" name="change_color_mode">Light Mode</button>
 
