Change favricon with color mode.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="js/script.js" type="text/javascript"></script>
 </head>
 <link id="styleing" rel="stylesheet" type="text/css" href="css/dark-mode.css">
-<link rel="icon" href="images/favicon_dark.ico">
+<link id="faviconio" rel="icon" href="images/favicon_dark.ico">
 
 <body>
   <div class="top-container">
@@ -26,7 +26,9 @@
       <h2>Hello.</h2>
       <p class="mid-para intro-para">I am an incoming Computer Science student at the Univerity of Waterloo interested in Data Science and Front-end Web development.</p>
     </div>
+
     <hr>
+
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
@@ -34,13 +36,16 @@
         <h3>Coding</h3>
         <p class="mid-para">Coding has always been my passion. I am always looking forward to learning more and expanding my knowledge through hackathons and online course work.</p>
       </div>
+
       <div class="skill-row">
         <img src="images/tutoring.gif" class="body_gif odd_gif" alt="Tutoring Gif">
         <h3>Tutoring</h3>
         <p class="mid-para">I have tutored students in Math and English. I had started working as a peer tutor at my school in grade 10, where I taught math. At Kumon Canada, I had worked as an assistant, where tutoring was one of my responsibilities.</p>
       </div>
     </div>
+
     <hr>
+
     <div class="my_projects">
       <h2>Projects</h2>
       <div class="projects">
@@ -49,6 +54,7 @@
         <p class="mid-para">I had built a game based on Space Invaders with a Covid-19 spin on it. It was a solo project submitted to Hack-cade, a hackathon hosted by MLH. The project was made using python with the following modules: pygame, os, time, and random. The
           code could be seen on the following GitHub link: <a target="_blank" href="https://github.com/MuhammadZ985/Covid-19-Game">https://github.com/MuhammadZ985/Covid-19-Game</a></p>
       </div>
+
       <div class="projects">
         <img src="images/stocks.gif" class="body_gif odd_gif" alt="Stocks Gif">
         <h3>S&P 500 Stocks Visualization System</h3>
@@ -56,7 +62,9 @@
           libraries. The code could be seen on the following GitHub link: <a target="_blank" href="https://github.com/MuhammadZ985/S-P500-Stock-Visulaization">https://github.com/MuhammadZ985/S-P500-Stock-Visulaization</a></p>
       </div>
     </div>
+
     <hr>
+
     <div class="contact-me">
       <h2>Get In Touch</h2>
       <h3>Feel free to reach out to me at any time.</h3>
@@ -72,12 +80,12 @@
     <a class="footer-link" target="_blank" href="https://www.instagram.com/muhammadhzaman/">Instagram</a>
     <p class="copyright">© 2021 Muhammad Zaman.</p>
     <button class="mode" id="change_mode" onclick="change_Mode()" name="change_color_mode">Light Mode</button>
-
   </div>
 
 
 
   </div>
+
 </body>
 
 </html>
