Add the amazon scraper project.

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 
     <div class="my_projects">
       <h2>Projects</h2>
+
       <div class="projects">
         <img src="images/covid-19.gif" class="body_gif even_gif" alt="Vaccinator Gif">
         <h3>Vaccinator</h3>
@@ -61,6 +62,13 @@
         <p class="mid-para">This is a stock visualization system, which creates various graphs based on user input. It can visualize the S&P 500 stocks from 2013-2018 based on a Kaggle data set. It is a solo project made through python with the pandas and plotly
           libraries. The code could be seen on the following GitHub link: <a target="_blank" href="https://github.com/MuhammadZ985/S-P500-Stock-Visulaization">https://github.com/MuhammadZ985/S-P500-Stock-Visulaization</a></p>
       </div>
+
+      <div class="projects">
+        <img src="images/amazon.gif" class="body_gif even_gif" alt="Amazon Gif">
+        <h3>Amazon Customer Reviews Scraper</h3>
+        <p class="mid-para">This is a solo web scraping project that would download and convert amazon reviews into a .csv file. To choose which product to download go into reviews.py in spiders and change the values in the list of ASIN numbers to the products you would like to download. Then run the program in the command prompt.  The code for the project could be seen on the following GitHub link: <a target="_blank" href="https://github.com/MuhammadZ985/amazonReviews">https://github.com/MuhammadZ985/amazonReviews</a></p>
+      </div>
+
     </div>
 
     <hr>
