Added new project.

--- a/index.html
+++ b/index.html
@@ -69,6 +69,12 @@
         <p class="mid-para">This is a solo web scraping project that would download and convert amazon reviews into a .csv file. To choose which product to download go into reviews.py in spiders and change the values in the list of ASIN numbers to the products you would like to download. Then run the program in the command prompt.  The code for the project could be seen on the following GitHub link: <a target="_blank" href="https://github.com/MuhammadZ985/amazonReviews">https://github.com/MuhammadZ985/amazonReviews</a></p>
       </div>
 
+      <div class="projects">
+        <img src="images/tinder.gif" class="body_gif odd_gif" alt="Tinder Logo">
+        <h3>TinDog</h3>
+        <p class="mid-para">TinDog is a remix of tinder but for dogs. This website uses Bootstrap, HTML, and CSS to create a single-page static website. The content of this webpage was provided by a course on Udemy and the challenge was to recreate a webpage based on a pdf document that was provided. I have added my spin to the website to make its UI/UX design more pleasant. The website could be seen on the following webpage: <a href="https://muhammadz985.github.io/TinDog/">https://muhammadz985.github.io/TinDog/</a>. The code could be seen on the following GitHub link: <a target="_blank" href="https://github.com/MuhammadZ985/TinDog">https://github.com/MuhammadZ985/TinDog</a>.</p>
+      </div>
+
     </div>
 
     <hr>
