Added new projects to personal site.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="profile">
       <img src="images/profile-photo.jpg" class="body_photo" alt="Profile Photo">
       <h2>Hello.</h2>
-      <p class="mid-para intro-para">I am an incoming Computer Science student at the Univerity of Waterloo interested in Data Science and Front-end Web development.</p>
+      <p class="mid-para intro-para">I am a First-Year Computer Science student at the Univerity of Waterloo interested in Data Science and Full Stack Web Development.</p>
     </div>
 
     <hr>
@@ -34,13 +34,14 @@
       <div class="skill-row">
         <img src="images/programming.gif" class="body_gif even_gif" alt="Computer Gif">
         <h3>Coding</h3>
-        <p class="mid-para">Coding has always been my passion. I am always looking forward to learning more and expanding my knowledge through hackathons and online course work.</p>
+        <p class="mid-para">Coding has always been my passion. I am always looking forward to learning more and expanding my knowledge through hackathons, online course work and side projects.</p>
       </div>
 
       <div class="skill-row">
         <img src="images/tutoring.gif" class="body_gif odd_gif" alt="Tutoring Gif">
         <h3>Tutoring</h3>
-        <p class="mid-para">I have tutored students in Math and English. I had started working as a peer tutor at my school in grade 10, where I taught math. At Kumon Canada, I had worked as an assistant, where tutoring was one of my responsibilities.</p>
+        <p class="mid-para">I have tutored students in Math and English. I had started working as a peer tutor at my school in grade 10, where I taught math. At Kumon Canada, I had worked as an assistant, where tutoring was one of my
+          responsibilities.</p>
       </div>
     </div>
 
@@ -50,29 +51,67 @@
       <h2>Projects</h2>
 
       <div class="projects">
-        <img src="images/covid-19.gif" class="body_gif even_gif" alt="Vaccinator Gif">
-        <h3>Vaccinator</h3>
-        <p class="mid-para">I had built a game based on Space Invaders with a Covid-19 spin on it. It was a solo project submitted to Hack-cade, a hackathon hosted by MLH. The project was made using python with the following modules: pygame, os, time, and random. The
-          code could be seen on the following GitHub link: <a target="_blank" href="https://github.com/MuhammadZ985/Covid-19-Game">https://github.com/MuhammadZ985/Covid-19-Game</a></p>
+        <img src="images/weather.gif" class="body_gif even_gif" alt="Weather Gif">
+        <h3>Weather City Website</h3>
+        <p class="mid-para">WeatherCity is the most comprehensive and time-consuming project I have made thus far. This full-stack website utilizes node.js for its backend along with OpenWeatherMap's API to display the weather in the city inputted in
+          the search bar. It also shows the current weather based on location on the home page. The code for the project could be seen on the following GitHub link: <a target="_blank"
+            href="https://github.com/MuhammadZ985/WeatherProject">https://github.com/MuhammadZ985/WeatherProject</a></p>
       </div>
 
       <div class="projects">
-        <img src="images/stocks.gif" class="body_gif odd_gif" alt="Stocks Gif">
-        <h3>S&P 500 Stocks Visualization System</h3>
-        <p class="mid-para">This is a stock visualization system, which creates various graphs based on user input. It can visualize the S&P 500 stocks from 2013-2018 based on a Kaggle data set. It is a solo project made through python with the pandas and plotly
-          libraries. The code could be seen on the following GitHub link: <a target="_blank" href="https://github.com/MuhammadZ985/S-P500-Stock-Visulaization">https://github.com/MuhammadZ985/S-P500-Stock-Visulaization</a></p>
+        <img src="images/simonGame.png" class="body_gif even_gif" alt="Simon Game">
+        <h3>Simon Game</h3>
+        <p class="mid-para">The Simon game is an online version of the board game Simon. It is a part of a Udemy challenge where the HTML and CSS of the website were provided and Javascript was required to build the remaining portion of the website. The code for the project could be seen on the following GitHub link: <a target="_blank"
+            href="https://github.com/MuhammadZ985/Simon-Game-Challenge">https://github.com/MuhammadZ985/Simon-Game-Challenge</a></p>
+      </div>
+
+      <!-- <div class="projects">
+        <img src="images/weather.gif" class="body_gif even_gif" alt="Weather Gif">
+        <h3>Weather City Website</h3>
+        <p class="mid-para">WeatherCity is the most comprehensive and time-consuming project I have made thus far. This full-stack website utilizes node.js for its backend along with OpenWeatherMap's API to display the weather in the city inputted in
+          the search bar. It also shows the current weather based on location on the home page. The code for the project could be seen on the following GitHub link: <a target="_blank"
+            href="https://github.com/MuhammadZ985/WeatherProject">https://github.com/MuhammadZ985/WeatherProject</a></p>
+      </div>
+
+      <div class="projects">
+        <img src="images/weather.gif" class="body_gif even_gif" alt="Weather Gif">
+        <h3>Weather City Website</h3>
+        <p class="mid-para">WeatherCity is the most comprehensive and time-consuming project I have made thus far. This full-stack website utilizes node.js for its backend along with OpenWeatherMap's API to display the weather in the city inputted in
+          the search bar. It also shows the current weather based on location on the home page. The code for the project could be seen on the following GitHub link: <a target="_blank"
+            href="https://github.com/MuhammadZ985/WeatherProject">https://github.com/MuhammadZ985/WeatherProject</a></p>
+      </div> -->
+
+      <div class="projects">
+        <img src="images/covid-19.gif" class="body_gif odd_gif" alt="Vaccinator Gif">
+        <h3>Vaccinator</h3>
+        <p class="mid-para">I had built a game based on Space Invaders with a Covid-19 spin on it. It was a solo project submitted to Hack-cade, a hackathon hosted by MLH. The project was made using python with the following modules: pygame, os,
+          time, and random. The
+          code could be seen on the following GitHub link: <a target="_blank" href="https://github.com/MuhammadZ985/Covid-19-Game">https://github.com/MuhammadZ985/Covid-19-Game</a></p>
       </div>
 
       <div class="projects">
         <img src="images/amazon.gif" class="body_gif even_gif" alt="Amazon Gif">
         <h3>Amazon Customer Reviews Scraper</h3>
-        <p class="mid-para">This is a solo web scraping project that would download and convert amazon reviews into a .csv file. To choose which product to download go into reviews.py in spiders and change the values in the list of ASIN numbers to the products you would like to download. Then run the program in the command prompt.  The code for the project could be seen on the following GitHub link: <a target="_blank" href="https://github.com/MuhammadZ985/amazonReviews">https://github.com/MuhammadZ985/amazonReviews</a></p>
+        <p class="mid-para">This is a solo web scraping project that would download and convert amazon reviews into a .csv file. To choose which product to download go into reviews.py in spiders and change the values in the list of ASIN numbers to
+          the products you would like to download. Then run the program in the command prompt. The code for the project could be seen on the following GitHub link: <a target="_blank"
+            href="https://github.com/MuhammadZ985/amazonReviews">https://github.com/MuhammadZ985/amazonReviews</a></p>
       </div>
 
       <div class="projects">
         <img src="images/tinder.gif" class="body_gif odd_gif" alt="Tinder Logo">
         <h3>TinDog</h3>
-        <p class="mid-para">TinDog is a remix of tinder but for dogs. This website uses Bootstrap, HTML, and CSS to create a single-page static website. The content of this webpage was provided by a course on Udemy and the challenge was to recreate a webpage based on a pdf document that was provided. I have added my spin to the website to make its UI/UX design more pleasant. The website could be seen on the following webpage: <a href="https://muhammadz985.github.io/TinDog/">https://muhammadz985.github.io/TinDog/</a>. The code could be seen on the following GitHub link: <a target="_blank" href="https://github.com/MuhammadZ985/TinDog">https://github.com/MuhammadZ985/TinDog</a>.</p>
+        <p class="mid-para">TinDog is a remix of tinder but for dogs. This website uses Bootstrap, HTML, and CSS to create a single-page static website. The content of this webpage was provided by a course on Udemy and the challenge was to recreate a
+          webpage based on a pdf document that was provided. I have added my spin to the website to make its UI/UX design more pleasant. The website could be seen on the following webpage: <a
+            href="https://muhammadz985.github.io/TinDog/">https://muhammadz985.github.io/TinDog/</a>. The code could be seen on the following GitHub link: <a target="_blank"
+            href="https://github.com/MuhammadZ985/TinDog">https://github.com/MuhammadZ985/TinDog</a>.</p>
+      </div>
+
+      <div class="projects">
+        <img src="images/stocks.gif" class="body_gif even_gif" alt="Stocks Gif">
+        <h3>S&P 500 Stocks Visualization System</h3>
+        <p class="mid-para">This is a stock visualization system, which creates various graphs based on user input. It can visualize the S&P 500 stocks from 2013-2018 based on a Kaggle data set. It is a solo project made through python with the
+          pandas and plotly
+          libraries. The code could be seen on the following GitHub link: <a target="_blank" href="https://github.com/MuhammadZ985/S-P500-Stock-Visulaization">https://github.com/MuhammadZ985/S-P500-Stock-Visulaization</a></p>
       </div>
 
     </div>
