Use Github API to show updated github stats.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,17 @@
     <div class="profile">
       <img src="images/profile-photo.jpg" class="body_photo" alt="Profile Photo">
       <h2>Hello.</h2>
-      <p class="mid-para intro-para">I am a First-Year Computer Science student at the Univerity of Waterloo interested in Data Science and Full Stack Web Development.</p>
+      <p class="mid-para">I am a First-Year Computer Science student at the Univerity of Waterloo interested in Data Science and Full Stack Web Development.</p>
+      <br>
+      <h3>GitHub Stats</h3>
+      <p class="mid-para">
+        <ul>
+          <li id="Username"></li>
+          <li id="repo"></li>
+          <li id="following"></li>
+          <li id="followers"></li>
+        </ul>
+      </p>
     </div>
 
     <hr>
@@ -124,12 +134,10 @@
       <div class="projects">
         <img src="images/dice.gif" class="body_gif odd_gif" alt="Dice Gif">
         <h3>Dice Game</h3>
-        <p class="mid-para">The dice challenge was one of the first challenges that I had done. The objective was to use basic javascript to create an online simulation of rolling a dice. A single die represents each player, the winner of the game
+        <p id="github" class="mid-para">The dice challenge was one of the first challenges that I had done. The objective was to use basic javascript to create an online simulation of rolling a dice. A single die represents each player, the winner of the game
           would be the one that rolls the higher number. Refreshing the page would roll the dice again while informing the players of who had won. The code for the project could be seen on the following GitHub link: <a target="_blank"
             href="https://github.com/MuhammadZ985/Dicee_Challenge">https://github.com/MuhammadZ985/Dicee_Challenge</a></p>
       </div>
-
-
     </div>
 
     <hr>
