--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
 
 						<!-- Intro -->
 							<article id="intro">
-								<h2 class="major">Intro</h2>
+								<h2 class="major">Introduction</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="Waterloo" /></span>
-								<p>My passion for programming brought me to the Cheriton School of Computer Science at the University of Waterloo. I am working towards my BCS and am scheduled to complete it in 2024. The branches of data science and machine learning are subfields which are of particular interest to me.</p>
-								<p>I continue to develop my programming skills through online coursework, side projects, and hackathons. To see my projects, check out my GitHub profile. I am specifically looking for internships related to computer science; however, I am willing to work flexibly in a different position. I value hard work, equality, and honesty. I like keeping up with the latest news in the world of technology and spending time with family. In the coming years, I hope to develop both as a person and as a working professional in the field of computer science.</p>
+								<p>My passion for programming brought me to the Cheriton School of Computer Science at the University of Waterloo. I am working towards my BCS and am scheduled to complete it in 2024. I am interested specifically in FinTech, Software Engineering, and Data Science.</p>
+								<p>I continue to develop my skills through online coursework, side projects, datathons and hackathons. To see my projects, check out my GitHub profile. I am specifically looking for opertunities related to Software Engineering and Quantitative Research; however, I am willing to work flexibly in a different position. I value hard work, equality, and honesty. I like keeping up with the latest news in the world of technology and spending time with family. In the coming years, I hope to develop both as a person and as a working professional.</p>
 							</article>
 
 						<!-- Work -->
@@ -61,14 +61,21 @@
 								</div>
 
 								<div>
+									<h3>Forex</h3>
+									<p>Currency conversion fees are usually considered to be unavoidable. But due to the amount of money exchanged globally between different currencies, traders could easily exchange the money directly between themselves, thus avoiding the conversion fees. This website is where people would post what currencies they have and which ones they desire. Once a match is found they meet up and trade. The code could be seen on the following GitHub link: <a href="https://github.com/MuhammadZ985/Forex">https://github.com/MuhammadZ985/Forex</a></p>
+								</div>
+
+								<div>
+									<h3>Amazon Customer Reviews Scraper</h3>
+									<p>This web scraping project would download amazon reviews using scrapy and its built-in files. To choose which product to download go into reviews.py in spiders and change the values in the list of ASIN numbers to the products you would like to download. Then run the program in the command prompt. The code for the project could be seen on the following GitHub link: <a target="_blank"
+									href="https://github.com/MuhammadZ985/amazonReviews">https://github.com/MuhammadZ985/amazonReviews</a></p>
+								</div>
+
+								<div>
 									<h3>Vaccinator</h3>
 									<p>I had built a game based on Space Invaders with a Covid-19 spin on it. It was a solo project submitted to Hack-cade, a hackathon hosted by MLH. The project was made using python with the following modules: pygame, os, time, and random. The code could be seen on the following GitHub link: <a href="https://github.com/MuhammadZ985/Covid-19-Game">https://github.com/MuhammadZ985/Covid-19-Game</a></p>
 								</div>
 
-								<div>
-									<h3>Forex</h3>
-									<p>Currency conversion fees are usually considered to be unavoidable. But due to the amount of money exchanged globally between different currencies, traders could easily exchange the money directly between themselves, thus avoiding the conversion fees. This website is where people would post what currencies they have and which ones they desire. Once a match is found they meet up and trade. The code could be seen on the following GitHub link: <a href="https://github.com/MuhammadZ985/Forex">https://github.com/MuhammadZ985/Forex</a></p>
-								</div>
 
 								<div>
 									<h3>S&P 500 Stocks Visualization System</h3>
@@ -93,12 +100,6 @@
 									<h3>Old Website</h3>
 									<p>My old personal website which I had made over the summer. It was a one-page static website that featured my experiences and achievement much like this one does, however, it had a completely different UX/UI design. The code for the project could be seen on the following GitHub link: <a href="https://github.com/MuhammadZ985/Front-End-Personal-Site">https://github.com/MuhammadZ985/Front-End-Personal-Site</a></p>
 								</div>
-
-								<div>
-									<h3>Miscellaneous Animations</h3>
-									<p>This is just a compilation of some of the animations that I was indenting to add to my website, however, they didn't make it to the final cut. They are attached to my website, with this <span style="font-weight: 600;"><a href="#">link</a></span>, and are uploaded to my GitHub with the following link: <a href="https://github.com/MuhammadZ985/animations">https://github.com/MuhammadZ985/animations</a></p>
-								</div>
-
 
 								<div>
 									<h3>Simon Game</h3>
@@ -134,8 +135,8 @@
 						<!-- https://api.staticforms.xyz/184c210c-92ad-458b-b71d-d7c000584081 -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<p>I am actively looking for internships over the summer. I am interested specifically in data science and machine learning roles and I continue to develop these skills through online coursework, side projects, and hackathons (see GitHub for more information). Although internships specifically related to computer science interest me I am willing to work flexibly in a different position. Besides internships I am also open to full-time employment, freelance opportunities, tutoring, volunteer work, working together in hackathons, etc.</p>
-								<p>Feel free to contact me through email at <a href="mailto:mh.zaman.4069@gmail.com">mh.zaman.4069@gmail.com</a>, or reach out to me through any of the platforms linked below.</p>
+								<p>I am actively looking for internships opportunities over the school year. I am interested specifically in FinTech, Quant, Software Engineering, and Data Science. I continue to develop these skills through online coursework, side projects, and hackathons (see GitHub for more information). Although internships specifically related to computer science and stats interest me I am willing to work flexibly in a different position. Besides internships I am also open to full-time and part-time employment, freelance opportunities, tutoring, volunteer work, working together in hackathons, etc.</p>
+								<p>Feel free to contact me through email at <a href="mailto:mhzaman.cs@gmail.com">mhzaman.cs@gmail.com</a>, or reach out to me through any of the platforms linked below.</p>
 								<!-- <form action="https://api.staticforms.xyz/submit" method="POST">
 									<input type="hidden" name="accessKey" value="184c210c-92ad-458b-b71d-d7c000584081">
 									<div class="fields">
@@ -159,8 +160,8 @@
 								</form> -->
 								<ul class="icons">
 									<li><a href="https://www.linkedin.com/in/muhammad-hamza-zaman/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-									<li><a href="https://www.facebook.com/MuhammadZ985/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="https://www.instagram.com/muhammadhzaman/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="https://www.facebook.com/mhzaman.cs/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+									<li><a href="https://www.instagram.com/mhzaman.cs/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 									<li><a href="https://github.com/MuhammadZ985" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 									<li><a href="https://discordapp.com/users/4mulator#7586/" class="icon brands fa-discord"><span class="label">Discord</span></a></li>
 								</ul>
