--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 
 								<div>
-									<h3>Amazon Customer Reviews Scraper</h3>
-									<p>This web scraping project would download amazon reviews using scrapy and its built-in files. To choose which product to download go into reviews.py in spiders and change the values in the list of ASIN numbers to the products you would like to download. Then run the program in the command prompt. The code for the project could be seen on the following GitHub link: <a target="_blank"
-									href="https://github.com/MuhammadZ985/amazonReviews">https://github.com/MuhammadZ985/amazonReviews</a></p>
+									<h3>Forex</h3>
+									<p>Currency conversion fees are usually considered to be unavoidable. But due to the amount of money exchanged globally between different currencies, traders could easily exchange the money directly between themselves, thus avoiding the conversion fees. This website is where people would post what currencies they have and which ones they desire. Once a match is found they meet up and trade. The code could be seen on the following GitHub link: <a href="https://github.com/MuhammadZ985/Forex">https://github.com/MuhammadZ985/Forex</a></p>
 								</div>
 
 								<div>
-									<h3>Forex</h3>
-									<p>Currency conversion fees are usually considered to be unavoidable. But due to the amount of money exchanged globally between different currencies, traders could easily exchange the money directly between themselves, thus avoiding the conversion fees. This website is where people would post what currencies they have and which ones they desire. Once a match is found they meet up and trade. The code could be seen on the following GitHub link: <a href="https://github.com/MuhammadZ985/Forex">https://github.com/MuhammadZ985/Forex</a></p>
+									<h3>Citadel DataOpen Report</h3>
+
+									<p>The East-Coast Dataopen hosted by Citadel and Correlation One is an invite-only Datathon featuring university students across the east coast. The event started on the 21st of March and ended on the 28th, lasting about a whole week. I was in a team of two where we analyzed the non-conventional indicators and instigators of traffic. We posed the following question: "How would investments in businesses and education affect traffic and road safety in major American cities?" In this report, we analyzed datasets and later created recommendations for which non-conventional areas municipal governments should invest in to reduce traffic congestion. The three cities of focus were New York, NY, Austin, TX, and Washington, DC. We analyzed publicly available data on 311 calls, building permits, business licenses, population education level and traffic congestion statistics. The report could be seen on the following GitHub link: <a target="_blank" href="https://github.com/MuhammadZ985/Citadel-Datathon">https://github.com/MuhammadZ985/Citadel-Datathon</a></p>
 								</div>
 
 								<div>
